# fastQuant

./: .gitignore  README.md
apps/web/: .env.example  package.json
apps/web/src/: app.css  app.html
apps/web/src/routes/: +page.svelte
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: analysis.py  fundamentals.py  search.py  strategy.py  watchlist.py
backend/app/cache/: keys.py  ttl.py
backend/app/core/: config.py  errors.py
backend/app/models/: __init__.py  base.py  market.py
backend/app/providers/: base.py  binance.py  fallback.py  kis.py  yahoo.py
backend/app/services/: __init__.py
backend/app/services/analysis/: indicators.py  service.py  signals.py
backend/app/services/market_data/: __init__.py  binance.py  cache.py  intervals.py  kis.py  service.py  yahoo.py
backend/app/services/strategy/: __init__.py  orb.py  strategy_a.py  strategy_b.py
backend/tests/: test_contract.py  test_indicators.py  test_market_data.py  test_orb.py  test_search.py  test_strategy_a.py  test_strategy_b.py
docs/: architecture.md  roadmap.md
frontend/web/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/web/src/: app.css  app.html
frontend/web/src/routes/: +page.ts
web/: pnpm-lock.yaml
web/src/lib/api/: client.ts  defaults.ts
web/src/lib/chart/: indicatorSpecs.ts  surface.ts
web/src/lib/components/: AnalysisSummary.svelte  ApiStatus.svelte  IndicatorDialog.svelte  MarketChart.svelte  SignalTape.svelte  WatchlistPanel.svelte
web/src/routes/: +page.svelte
(+157 files in other folders)
